[package]
name = "centaurs"
version = "0.1.0"
edition = "2021"
description = """
A utility crate for myself.
"""
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/divinerapier/centaurs"
include = ["src/", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1.19.2", optional = true }
serde = { version = "1.0.136", optional = true}
serde_json = { version = "1.0.79", optional = true}
serde_yaml = { version = "0.8.23", optional = true}
nacos_rust_client = { version = "0.1.6", optional = true}
tracing = { version = "0.1.32", optional = true}
lazy_static = { version = "1.4.0", optional = true }
async-trait = { version = "0.1.52", optional = true}
pnet_datalink = { version = "0.29.0", optional = true}
rdkafka = { version = "0.28.0", features = ["cmake-build"], optional = true}
futures = { version = "0.3.21", optional = true}
aws-config = { version = "0.11.0", optional = true}
aws-sdk-s3 = { version = "0.11.0", optional = true}
aws-types = { version = "0.11.0", optional = true}
aws-endpoint = { version = "0.11.0", optional = true}
derive_builder = { version = "0.11.2", optional = true }
thiserror = { version = "1.0.30" }
anyhow = { version = "1.0.58" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
chrono = "0.4.19"
futures = "0.3.21"
async-trait = { version = "0.1.52" }

[dev-dependencies.tokio]
version = "1.19.2"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[features]
default = [
]
full = [
    "base62",
    "configuration",
    "cos",
    "datalink",
    "messaging",
    "nacos",
    "nacos-configuration",
    "nacos-servicediscovery",
    "servicediscovery",
]
base62 = [
    "dep:lazy_static"
]
configuration = [
    "dep:async-trait",
]
cos = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:aws-endpoint",
]
datalink = [
    "dep:pnet_datalink"
]
messaging = [
    "dep:async-trait",
    "dep:futures",
    "dep:rdkafka",
    "dep:tokio",
    "dep:tracing"
]
nacos = [
    "datalink",
    "dep:nacos_rust_client",
    "dep:tracing",
    "dep:derive_builder",
]
nacos-configuration = [
    "nacos",
    "configuration"
]
nacos-servicediscovery = [
    "nacos",
    "servicediscovery",
]
servicediscovery = [
    "dep:futures",
    "dep:async-trait",
    "dep:derive_builder",
    "dep:lazy_static",
    "dep:tracing",
]

[[example]]
name = "consumers"
path = "examples/consumers.rs"
required-features = ["messaging"]

[[example]]
name = "producer"
path = "examples/producer.rs"
required-features = ["messaging"]

[[test]]
name = "consumer"
path = "tests/consumer.rs"
required-features = ["messaging"]

[[test]]
name = "nacos-register"
path = "tests/nacos-register.rs"
required-features = ["nacos-servicediscovery"]

[[test]]
name = "discovery"
path = "tests/discovery.rs"
required-features = ["nacos-servicediscovery"]
