[package]
name = "centaurs"
version = "0.1.0"
edition = "2021"
description = """
A utility crate for myself.
"""
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/divinerapier/centaurs"
include = ["src/", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1.17.0", features = ["full"], optional = true}
serde = { version = "1.0.136", optional = true}
serde_json = { version = "1.0.79", optional = true}
serde_yaml = { version = "0.8.23", optional = true}
nacos_rust_client = { version = "0.1.6", optional = true}
thiserror = { version = "1.0.30", optional = true}
tracing = { version = "0.1.32", optional = true}
lazy_static = { version = "1.4.0", optional = true }
async-trait = { version = "0.1.52", optional = true}
pnet_datalink = { version = "0.29.0", optional = true}
rdkafka = { version = "0.28.0", features = ["cmake-build"], optional = true}
futures = { version = "0.3.21", optional = true}
aws-config = { version = "0.11.0", optional = true}
aws-sdk-s3 = { version = "0.11.0", optional = true}
aws-types = { version = "0.11.0", optional = true}
aws-endpoint = { version = "0.11.0", optional = true}

[dev-dependencies]
tracing-subscriber = "0.3.11"

[features]
default = [
    "full"
]
base62 = [
    "dep:lazy_static"
]
configuration = [
    "nacos",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:thiserror"
]
cos = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:aws-endpoint",
]
datalink = [
    "dep:pnet_datalink"
]
messaging = [
    "dep:rdkafka",
    "dep:tokio",
    "dep:thiserror",
    "dep:async-trait",
    "dep:futures",
    "dep:tracing"
]
nacos = [
    "datalink",
    "servicediscovery",
    "dep:nacos_rust_client",
    "dep:tracing"
]
servicediscovery = [
    "dep:tokio",
    "dep:lazy_static"
]
nacos-servicediscovery = [
    "nacos",
    "servicediscovery"
]
full = [
    "base62",
    "configuration",
    "cos",
    "datalink",
    "messaging",
    "nacos",
    "servicediscovery",
    "nacos-servicediscovery"
]
