[package]
name = "centaurs"
version = "0.2.1"
edition = "2021"
description = """
A utility crate.
"""
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/divinerapier/centaurs"
include = ["src/", "LICENSE", "README.md"]

[dependencies]
tokio = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
nacos_rust_client = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }
async-trait = { version = "0.1", optional = true }
pnet_datalink = { version = "0.29", optional = true }
rdkafka = { version = "0.28", features = ["cmake-build"], optional = true }
futures = { version = "0.3", optional = true }
aws-config = { version = "0.11.0", optional = true }
aws-sdk-s3 = { version = "0.11.0", optional = true }
aws-types = { version = "0.11.0", optional = true }
aws-endpoint = { version = "0.11.0", optional = true }
derive_builder = { version = "0.11.2", optional = true }
thiserror = { version = "1" }
anyhow = { version = "1" }

[dev-dependencies]
tracing-subscriber = "0.3"
chrono = "0.4"
futures = "0.3"
async-trait = { version = "0.1" }

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[features]
default = []
full = [
    "base62",
    "configuration",
    "cos",
    "datalink",
    "messaging",
    "nacos",
    "nacos-configuration",
    "nacos-servicediscovery",
    "servicediscovery",
]
base62 = ["dep:lazy_static"]
configuration = ["dep:async-trait"]
cos = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-types", "dep:aws-endpoint"]
datalink = ["dep:pnet_datalink"]
messaging = [
    "dep:async-trait",
    "dep:futures",
    "dep:rdkafka",
    "dep:tokio",
    "dep:tracing",
]
nacos = [
    "datalink",
    "dep:nacos_rust_client",
    "dep:tracing",
    "dep:derive_builder",
]
nacos-configuration = ["nacos", "configuration"]
nacos-servicediscovery = ["nacos", "servicediscovery"]
servicediscovery = [
    "dep:futures",
    "dep:async-trait",
    "dep:derive_builder",
    "dep:lazy_static",
    "dep:tracing",
]

[[example]]
name = "consumers"
path = "examples/consumers.rs"
required-features = ["messaging"]

[[example]]
name = "producer"
path = "examples/producer.rs"
required-features = ["messaging"]

[[test]]
name = "consumer"
path = "tests/consumer.rs"
required-features = ["messaging"]

[[test]]
name = "nacos-register"
path = "tests/nacos-register.rs"
required-features = ["nacos-servicediscovery"]

[[test]]
name = "discovery"
path = "tests/discovery.rs"
required-features = ["nacos-servicediscovery"]
